--- a/p/test/index.html
+++ b/p/test/index.html
@@ -25,7 +25,7 @@
 <div id="app">
 
 
-    <div id="chart1" :style="{ width: '920px', height: '924px',transform:'scale(0.5,0.5)'}"></div>
+    <div id="chart1" :style="{ width: '1920px', height: '924px'}"></div>
 
 </div>
 
