--- a/p/test/index.html
+++ b/p/test/index.html
@@ -20,8 +20,8 @@ body {
 }
 
 #app {
-    width: 100%;
-    height: 100%;
+width: 1850px;
+height:894px;
 }
 
 #chart1 {
@@ -60,8 +60,8 @@ z-index: 2;
 
 #background {
     position: absolute;
-    width: 100%;
-    height: 100%;
+width: 1850px;
+height:894px;
     z-index: 1;
 }
 
