--- a/p/test/index.html
+++ b/p/test/index.html
@@ -77,7 +77,7 @@ height:894px;
     </style>
 
 <div id="background">
-    <img src="https://cdn.jsdelivr.net/gh/xiamian1012/echarts@store/icon/background4.jpg"/>
+    <img src="https://cdn.jsdelivr.net/gh/xiamian1012/echarts@store/icon/background4.jpg" width="1840px"/>
 </div>
 
 <div id="video"> 
