--- a/p/test/index.html
+++ b/p/test/index.html
@@ -20,14 +20,14 @@ body {
 }
 
 #app {
-width: 1850px;
+width: 100%;
 height:894px;
 }
 
 #chart1 {
 top:20px;
 left:10px;
-width: 1850px;
+width: 1840px;
 height:894px;
 z-index: 2;
 }
